<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:collapseColumns="1,2,3"
    android:id="@+id/table"
    android:gravity="center"
    android:background="@drawable/bcktable"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttampil"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="40dp"/>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tnama"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/blueSky"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/talamat"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/blueSky"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tnohp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/blueSky"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tnim"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/blueSky"
            android:gravity="center"/>

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tPascal"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginHorizontal="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tKlaten"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t081227448615"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t20190140105"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />

    </TableRow>


    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tSeptian"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginHorizontal="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tPalembang"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t087894969951"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t20190140046"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />

    </TableRow>


    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tdedi"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginHorizontal="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tRiau"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t082777992829"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t20140140008"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />

    </TableRow>


    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tfahmi"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginHorizontal="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tSumedang"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t085837829998"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t20170140008"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp" />

    </TableRow>

    <Button
        android:id="@+id/btndetail"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:onClick="Table"
        android:text="@string/tShowDetail"
        android:textAllCaps="false" />



</TableLayout>